--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT = 5500
-DBURL = mongodb+srv://project:project@cluster0.wr0ge.mongodb.net/ProjectDB?retryWrites=true&w=majority
+PORT = 9080
+DBURL = mongodb+srv://komarambheem:thokkukuntupovale@cluster0.nitnj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET = abcdef
 
 ADMIN_USER_NAME=admin
