added spinner and few local images upgrade

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DBURL = mongodb+srv://komarambheem:thokkukuntupovale@cluster0.nitnj.mongodb.net/
 SECRET = abcdef
 
 ADMIN_USER_NAME=admin
-ADMIN_PASSWORD=admin
+ADMIN_PASSWORD=admin123
