--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "ng-http-loader": "^11.0.1",
+    "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^13.2.1",
+    "ngx-window-token": "^5.0.0",
     "nodemodule": "^0.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
